@@ -1,5 +1,7 @@
 2014-02-26  gepr  <gepr@tempusdictum.com>
 
+	* future.html: Imported the old future page.
+
 	* software.html: Imported the old software page.
 
 	* projects.html: Fixed Neil's link.
